# my_first_site

my_site/: pyproject.toml
my_site/itfirst/: db.sqlite3  manage.py
my_site/itfirst/itfirst/: asgi.py  settings.py  urls.py  wsgi.py
my_site/itfirst/main/: urls.py  views.py
my_site/itfirst/main/static/main/css/: main.css
my_site/itfirst/main/templates/main/: about.html  index.html  layout.html
my_site/itfirst/news/: forms.py  models.py  urls.py  views.py
my_site/itfirst/news/migrations/: 0001_initial.py  0002_alter_articles_options.py
my_site/itfirst/news/templates/news/: create.html  details_view.html  news_delete.html  news_home.html
