[tool.poetry]
name = "my-site"
version = "0.1.0"
description = ""
authors = ["ivanlubyk <ivangul999@gmail.com>"]
readme = "README.md"
packages = [{include = "my_site"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
